# CRSF-for-stm32

./: .gitignore  README.md
Core/: CMakeLists.txt
Core/Inc/: CRSF_Config.h  CRSF_Connection.h  CRSF_HAL_Include.h  CRSF_HandsetData.h  CRSF_TelemetryData.h  crc8.h
Core/Inc/CRC/: CRSF_CRC_8.h
Core/Inc/Data/: CRSF_CommonTypes.h  CRSF_HandsetData.h  CRSF_TelemetryData.h
Core/Src/: CRC_8.c  CRSF_CRC_8.c  CRSF_Connection.c  CRSF_ConnectionRX.c  CRSF_ConnectionTX.c  Config.cmake
